--- a/index.html
+++ b/index.html
@@ -88,6 +88,6 @@
         </aside>
       </section>
     </main>
-    <script src="/scripts.js"></script>
+    <script src="/refund/scripts.js"></script>
   </body>
 </html>
